--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <a id="GrupoD">Grupo 4</a>
                 <a id="GrupoE">Grupo 5</a>
                 <a id="GrupoF">Grupo 6</a>
-                <a id="GrupoG" class="active">Grupo G</a>
-                <a id="GrupoH">Grupo 7</a>
+                <a id="GrupoG" class="active">Grupo 7</a>
+                <a id="GrupoH">Grupo 8</a>
             </nav>
             <main id="cards">
 
